// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> Snaphot must match circleBadgeLargeIcon 1`] = `
<a
  className="bg-gray-dark CircleBadge CircleBadge--large"
  href="href"
  title="title"
>
  <svg
    aria-hidden="true"
    className="text-white CircleBadge-icon"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 10 16"
    width={10}
  >
    <path
      d="M10 7H6l3-7-9 9h4l-3 7 9-9z"
      fillRule="evenodd"
    />
  </svg>
</a>
`;

exports[`<Avatar /> Snaphot must match circleBadgeMediumIcon 1`] = `
<a
  className="bg-gray-dark CircleBadge CircleBadge--medium"
  href="href"
  title="title"
>
  <svg
    aria-hidden="true"
    className="text-white CircleBadge-icon"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 10 16"
    width={10}
  >
    <path
      d="M10 7H6l3-7-9 9h4l-3 7 9-9z"
      fillRule="evenodd"
    />
  </svg>
</a>
`;

exports[`<Avatar /> Snaphot must match circleBadgeSmallIcon 1`] = `
<a
  className="bg-yellow CircleBadge CircleBadge--small"
  href="href"
  title="title"
>
  <svg
    aria-hidden="true"
    className="text-white CircleBadge-icon"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "fill": "currentColor",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 10 16"
    width={10}
  >
    <path
      d="M10 7H6l3-7-9 9h4l-3 7 9-9z"
      fillRule="evenodd"
    />
  </svg>
</a>
`;
